--- a/SIMSAM/SIMSAM.csproj
+++ b/SIMSAM/SIMSAM.csproj
@@ -59,6 +59,8 @@
     <Content Include="Demo.aspx" />
     <Content Include="Images\diagram.png" />
     <Content Include="Images\simsbanner.jpg" />
+    <Content Include="Scripts\jquery.jsPlumb-1.3.16-all-min.js" />
+    <Content Include="Scripts\jquery.jsPlumb-1.3.16-all.js" />
     <Content Include="Styles\Site.css" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
